tests/NormalTests/paczka1/fuzzy1/44639191.err
Error in line 7: jjFaDOn7 A245 67,4
Error in line 6: A163 A642 59,2
Error in line 27: A163 A163 70,2
Error in line 28: A163 A925 90,9
Error in line 29: A163 A642 96,8
Error in line 31: A163 A163 18,8
Error in line 33: A163 A245 28,0
Error in line 26: cNb0L A642 18,5
